much better now

--- a/index.html
+++ b/index.html
@@ -46,60 +46,55 @@
     </nav>
     <main>
         <div class="row">
-            <div class="column">
+            <div class="topColumn">
                 <img class="itemImage" src="images\1908364606615453350.jpg" />
                 <div class="itemText">
                     <span class="itemTitle">קמעונות ומסחר</span>
                     <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
                         הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</span>
-                    <span class="itemReadMore"><a href="">קרא עוד</a></span>
+                    <a class="itemReadMore" href="#"><span>קרא עוד</span></a>
                 </div>
             </div>
-            <div class="column">
+            <div class="topColumn">
                 <img class="itemImage" src="images\Picture-046410251500.jpg" />
                 <div class="itemText">
                     <span class="itemTitle">זיקוק</span>
                     <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
                         הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</span>
-                    <span class="itemReadMore"><a href="">קרא עוד</a></span>
+                    <a class="itemReadMore" href="#"><span>קרא עוד</span></a>
                 </div>
             </div>
-            <div class="column">
+            <div class="topColumn">
                 <img class="itemImage" src="images\פזקר_-291_354410564000.jpg" />
                 <div class="itemText">
                     <span class="itemTitle">תעשיות ומסחר</span>
                     <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
                         הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</span>
-                    <span class="itemReadMore"><a href="">קרא עוד</a></span>
+                    <a class="itemReadMore" href="#"><span>קרא עוד</span></a>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="column">
-                <img class="itemImage" src="images\paz_250x110059890678.jpg" />
-                <div class="itemText">
-                    <span class="itemTitle">כרטיס אשראי שופרסל וכרטיס אשראי יש</span>
-                    <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
-                        הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</span>
-                    <span class="itemReadMore"><a href="">קרא עוד</a></span>
-                </div>
+            <div class="bottomColumn">
+                <span class="itemTitle">כרטיס אשראי שופרסל וכרטיס אשראי יש</span>
+                <!-- draw line -->
+                <img class="itemImage cardImg" src="images\paz_250x110059890678.jpg" />
+                <a class="itemReadMore" href="#"><span>לפרטים נוספים</span></a>
             </div>
-            <div class="column">
-                <img class="itemImage" src="images\banner_atar.jpg" />
-                <div class="itemText">
-                    <span class="itemTitle">מכונת קפה LAVAZZA</span>
-                    <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
-                        הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</span>
-                    <span class="itemReadMore"><a href="">קרא עוד</a></span>
-                </div>
+            <div class="bottomColumn">
+                <span class="itemTitle">מכונת קפה LAVAZZA</span>
+                <img class="itemImage cardImg" src="images\banner_atar.jpg" />
+                <a class="itemReadMore" href="#"><span>לפרטים נוספים</span></a>
             </div>
-            <div class="column">
-                <img class="itemImage" src="images\Untitled-3058756287.jpg" />
-                <div class="itemText">
-                    <span class="itemTitle">התחנות שלנו בדרך שלך</span>
-                    <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
-                        הקבוצה, שמתאפיינת בחדשנות, יעילות ומובילות. החטיבה פועלת...</span>
-                    <span class="itemReadMore"><a href="">קרא עוד</a></span>
+            <div class="bottomColumn">
+                <div class="itemTitle">התחנות שלנו בדרך שלך</div>
+                <div class="mapItem">
+                    <img class="itemImage mapImg" src="images\Untitled-3058756287.jpg" />
+                    <div>
+                        <a class="mapItem" href="#North"><span>צפון</span></a>
+                        <a class="mapItem" href="#Center"><span>מרכז</span></a>
+                        <a class="mapItem" href="#South"><span>דרום</span></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -107,7 +102,7 @@
     <footer>
         <nav class="bottomNav">
             <ul>
-                <li class="bottomMenu"><a href="#">F</a></li>
+                <li class="bottomMenu"><a href="#"><img id="fbIcon" src="images\fb_icon.png"></a></li>
                 <li>|</li>
                 <li class="bottomMenu"><a href="#">En</a></li>
                 <li>|</li>
