to be continued

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
 <body onload="onLoad()">
     <nav class="topNav">
+        <a href="#" class="pazLogo"><img src="images\paz_logo.png" /></a>
         <ul>
-            <li class="menuItem"><a href="#"><img id="pazLogo" src="images\paz_logo.png" /></a></li>
-            <li class="menuItem"><a href="#"><img src="images\menu_home.png" id="homeImage" /></a></li>
+            <li class="menuItem homeImage" style="width: 17px"><a href="#home" class="homeImage">a</a></li>
             <li class="menuSeparator">|</li>
             <li class="dropDownMenu menuItem"><a href="#"><span class="menuItem">אודות</span></a>
-                <nav class="dropDownContent">
+                <nav class="dropDownContent topNav">
                     <ul>
                         <li class="menuItem"><a href="#"><span class="menuItem">אודות</span></a></li>
                         <li class="menuItem"><a href="#"><span class="menuItem">אודות</span></a></li>
@@ -23,7 +23,7 @@
             </li>
             <li class="menuSeparator">|</li>
             <li class="dropDownMenu menuItem"><a href="#"><span class="menuItem">חטיבות</span></a>
-                <nav class="dropDownContent">
+                <nav class="dropDownContent topNav">
                     <ul>
                         <li class="menuItem"><a href="#"><span class="menuItem">חטיבות</span></a></li>
                         <li class="menuItem"><a href="#"><span class="menuItem">חטיבות</span></a></li>
