includes home image and search text

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body onload="onLoad()">
     <nav class="topNav">
-        <a href="#" class="pazLogo"><img src="images\paz_logo.png" /></a>
+        <a href="#" class="pazLogo"><img src="/images/paz_logo.png" /></a>
         <ul>
-            <li class="menuItem homeImage" style="width: 17px"><a href="#home" class="homeImage">a</a></li>
+            <li class="menuItem homeImage"><a href="#home" class="homeImage"></a></li>
             <li class="menuSeparator">|</li>
             <li class="dropDownMenu menuItem"><a href="#"><span class="menuItem">אודות</span></a>
                 <nav class="dropDownContent topNav">
@@ -43,6 +43,11 @@
             <li class="menuSeparator">|</li>
             <li class="dropDownMenu menuItem"><a href="#"><span class="menuItem">חדשות ומדיה</span></a></li>
         </ul>
+        <div class="searchText">
+         <a href="#english">English</a>
+        <input type="text" class="searchInput" placeholder="רשום מילת חיפוש">
+        <img src="/images/search_button.png"/>
+    </div>
     </nav>
     <main>
         <div class="row">
