--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body onload="onLoad()">
     <nav class="topNav">
-        <a href="#" class="pazLogo"><img src="/images/paz_logo.png" /></a>
+        <a href="#" class="pazLogo"><img src="images/paz_logo.png" /></a>
         <ul>
             <li class="menuItem homeImage"><a href="#home" class="homeImage"></a></li>
             <li class="menuSeparator">|</li>
@@ -46,13 +46,13 @@
         <div class="searchText">
          <a href="#english">English</a>
         <input type="text" class="searchInput" placeholder="רשום מילת חיפוש">
-        <img src="/images/search_button.png"/>
+        <img src="images/search_button.png"/>
     </div>
     </nav>
     <main>
         <div class="row">
             <div class="topColumn">
-                <img class="itemImage" src="images\1908364606615453350.jpg" />
+                <img id="switchedImage" class="itemImage" src="images/1908364606615453350.jpg" />1908364606615453350
                 <div class="itemText">
                     <span class="itemTitle">קמעונות ומסחר</span>
                     <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="topColumn">
-                <img class="itemImage" src="images\Picture-046410251500.jpg" />
+                <img class="itemImage" src="images/Picture-046410251500.jpg" />
                 <div class="itemText">
                     <span class="itemTitle">זיקוק</span>
                     <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
@@ -126,6 +126,9 @@
                 <li class="bottomMenu"><a href="#">צור קשר</a></li>
             </ul>
         </nav>
+        <div class="bottomImg">
+            <img src="images\2015.jpg"/>
+        </div>
     </footer>
 </body>
 
