--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>My mid course project</title>
     <link rel="stylesheet" href="lib\style.css">
     <script src="lib\script.js"></script>
+    <base href = "https://guyshachar.github.io/WebCourseMidProjectRepo/" />
 </header>
 
 <body onload="onLoad()">
@@ -52,7 +53,7 @@
     <main>
         <div class="row">
             <div class="topColumn">
-                <img id="switchedImage" class="itemImage" src="images/1908364606615453350.jpg" />1908364606615453350
+                <img id="switchedImage" class="itemImage" src="images/1908364606615453350.jpg" />
                 <div class="itemText">
                     <span class="itemTitle">קמעונות ומסחר</span>
                     <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
