--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 <header>
     <title>My mid course project</title>
-    <link rel="stylesheet" href="lib\style.css">
-    <script src="lib\script.js"></script>
-    <base href = "https://guyshachar.github.io/WebCourseMidProjectRepo/" />
+    <link rel="stylesheet" href="lib/style.css">
+    <script src="lib/script.js"></script>
 </header>
 
 <body onload="onLoad()">
@@ -53,7 +52,7 @@
     <main>
         <div class="row">
             <div class="topColumn">
-                <img id="switchedImage" class="itemImage" src="images/1908364606615453350.jpg" />
+                <img id="switchedImage" class="itemImage" src="images/1908364606615453350.JPG" />
                 <div class="itemText">
                     <span class="itemTitle">קמעונות ומסחר</span>
                     <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
@@ -71,7 +70,7 @@
                 </div>
             </div>
             <div class="topColumn">
-                <img class="itemImage" src="images\פזקר_-291_354410564000.jpg" />
+                <img class="itemImage" src="images/פזקר_-291_354410564000.jpg" />
                 <div class="itemText">
                     <span class="itemTitle">תעשיות ומסחר</span>
                     <span class="itemDesc">במסגרת חטיבת הקו"מ של פז מתבצעת הפעילות הקמעונאית, הנדל"נית, והשיווקית של
@@ -84,18 +83,18 @@
             <div class="bottomColumn">
                 <span class="itemTitle">כרטיס אשראי שופרסל וכרטיס אשראי יש</span>
                 <!-- draw line -->
-                <img class="itemImage cardImg" src="images\paz_250x110059890678.jpg" />
+                <img class="itemImage cardImg" src="images/paz_250x110059890678.jpg" />
                 <a class="itemReadMore" href="#"><span>לפרטים נוספים</span></a>
             </div>
             <div class="bottomColumn">
                 <span class="itemTitle">מכונת קפה LAVAZZA</span>
-                <img class="itemImage cardImg" src="images\banner_atar.jpg" />
+                <img class="itemImage cardImg" src="images/banner_atar.jpg" />
                 <a class="itemReadMore" href="#"><span>לפרטים נוספים</span></a>
             </div>
             <div class="bottomColumn">
                 <div class="itemTitle">התחנות שלנו בדרך שלך</div>
                 <div class="mapItem">
-                    <img class="itemImage mapImg" src="images\Untitled-3058756287.jpg" />
+                    <img class="itemImage mapImg" src="images/Untitled-3058756287.jpg" />
                     <div>
                         <a class="mapItem" href="#North"><span>צפון</span></a>
                         <a class="mapItem" href="#Center"><span>מרכז</span></a>
@@ -108,7 +107,7 @@
     <footer>
         <nav class="bottomNav">
             <ul>
-                <li class="bottomMenu"><a href="#"><img id="fbIcon" src="images\fb_icon.png"></a></li>
+                <li class="bottomMenu"><a href="#"><img id="fbIcon" src="images/fb_icon.png"></a></li>
                 <li>|</li>
                 <li class="bottomMenu"><a href="#">En</a></li>
                 <li>|</li>
@@ -127,8 +126,8 @@
                 <li class="bottomMenu"><a href="#">צור קשר</a></li>
             </ul>
         </nav>
-        <div class="bottomImg">
-            <img src="images\2015.jpg"/>
+        <div class="logo">
+            <a href="#logo" class="logo"><img class="logo" src="images/white_logo.jpg"/></a>
         </div>
     </footer>
 </body>
