add missing logo

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </ul>
         </nav>
         <div class="logo">
-            <a href="#logo" class="logo"><img class="logo" src="images/white_logo.jpg"/></a>
+            <a href="#logo" class="logo"><img class="logo" src="images/white_logo.png"/></a>
         </div>
     </footer>
 </body>
